--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,5 +9,6 @@
     },
     "ghcr.io/tailscale/codespace": {},
     "ghcr.io/devcontainers-contrib/features/bash-command:1": {}
-  }
+  },
+  "updateContentCommand": "mkdir /pico; cd /pico; git clone https://github.com/raspberrypi/pico-sdk.git --branch master;  tailscale up --accept-routes"
 }
